--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <button type="button" id="bottone" name="button">Start</button>
 
+    <div id="numeri">
+
+    </div>
+
     <script src="js/script.js" charset="utf-8"></script>
 
   </body>
