--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   <body>
     <h1>Ludopatia</h1>
 
-    <h2>Clicca il bottone per incominciare la partita</h2>
 
-    <button type="button" id="bottone" name="button">Start</button>
+    <div id="btn">
+      <h2>Clicca qui per incominciare la partita</h2>
+    </div>
 
     <div id="numeri">
+      <div id="dado-pc">
 
+      </div>
+      <div id="dado-utente">
+
+      </div>
     </div>
 
     <script src="js/script.js" charset="utf-8"></script>
