Codice non funzionante

--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
   <body>
     <h1>Ludopatia</h1>
 
+    <div id="errore">
 
-    <div id="btn">
-      <h2>Clicca qui per incominciare la partita</h2>
     </div>
 
-    <div id="numeri">
+    <div id="btn">
+    </div>
+
       <div id="dado-pc">
 
       </div>
       <div id="dado-utente">
 
       </div>
+
+    <div id="risultato">
+
     </div>
 
     <script src="js/script.js" charset="utf-8"></script>
